--- a/src/components/layout/ProductsSection.module.scss
+++ b/src/components/layout/ProductsSection.module.scss
@@ -6,6 +6,7 @@
 .title {
   font-size: 18px;
   font-weight: 500;
+  padding: 12px;
 }
 
 .tableWrapper {
